--- a/2022-2023/Machine Learning/2.linear-models.org
+++ b/2022-2023/Machine Learning/2.linear-models.org
@@ -76,6 +76,8 @@ plt.legend()
 #+RESULTS:
 [[file:images/linear_model.png]]
 
+*TODO* What is the slope and intercept?
+
 *** Supporting example
 
 Let's have a look at how we would use this linear model with one of the datasets: The
@@ -264,10 +266,10 @@ down the loss curve.
 [[file:images/loss_curve_w_1_with_path.png]]
 
 To determine which way is up, and which way is down the curve, we use the *Gradient* of
-the curve (hence Gradient Descent). We compute the gradient using:
+the curve (hence Gradient Descent). We compute the gradient using finite differences method:
 
 \[
-\Delta = \frac{f(x) - f(x+h)}{x - (x+h)}
+\Delta = \frac{f(x+h) - f(x)}{h}
 \]
 
 where $f(x)$ is the loss when $w$ takes on the value of $x$. $h$ is a very small
@@ -289,7 +291,7 @@ axins.set_xlim(0, 2)
 # measuring gradient
 axins.plot([1, 1.5], [loss(boston.RM, boston.target, 1.5, 1), loss(boston.RM, boston.target, 1.5, 1)], color='black')
 axins.plot([1, 1], [loss(boston.RM, boston.target, 1, 1), loss(boston.RM, boston.target, 1.5, 1)], color='black')
-axins.text(1.15, loss(boston.RM, boston.target, 1.58, 1), "$w + h$")
+axins.text(1.23, loss(boston.RM, boston.target, 1.58, 1), "$h$")
 axins.text(0.6, loss(boston.RM, boston.target, 1.30, 1), "$f(x+h)$")
 
 
@@ -306,19 +308,19 @@ mark_inset(ax, axins, loc1=2, loc2=4, fc="none", ec="0.5")
 If we select $h = 0.5$ then we will have the formula:
 
 \[
-\Delta_w = \frac{\mathcal{L}(w) - \mathcal{L}(w + 0.5)}{w - (w + 0.5)}
+\Delta_w = \frac{\mathcal{L}(w + 0.5) - \mathcal{L}(w)}{w}
 \]
 
 where $\mathcal{L}$ represents our loss function, MAE. If we calculate this we have:
 #+LaTeX_header: \usepackage{amsmath}
 
 
-\begin{aligned}
-\Delta_w &= \frac{\mathcal{L}(w) - \mathcal{L}(w + 0.5)}{w - (w + h)} \\
-&= \frac{\mathcal{L}(1) - \mathcal{L}(1.5)}{1  - (1 + 0.5)} \\
-&= \frac{15 - 12}{-0.5} \\
+\[\begin{aligned}
+\Delta_w &= \frac{\mathcal{L}(w + 0.5) - \mathcal{L}(w)}{h} \\
+&= \frac{\mathcal{L}(1.5)- \mathcal{L}(1)}{1  - (0.5)} \\
+&= \frac{12 - 15}{0.5} \\
 &= -6.0
-\end{aligned}
+\end{aligned}\]
 
 Given that the gradient is a negative number, we know that the curve is going
 down/decreasing. So we will want to move $w$ in this direction -- we want to move
@@ -328,10 +330,159 @@ $w$ so that the loss decreases.
 \overline{w} = w - \eta \Delta_w
 \]
 
+If we plug in the numbers we've calculated for when $w = 1$ we get and $eta = 0.5$:
+
+\[\begin{aligned}
+\overline{w} &= w - \eta \Delta_w \\
+&= 1.0 - (0.5 * -6.0) \\
+&= 1.0 - (-3.0) \\
+&= 4.0
+\end{aligned}\]
+
 Our new value for the $w$ parameter ($\overline{w}$) is computed by taking its
 original value and subtracting the gradient modulated/multiplied by $\eta$. $\eta$ in
-this case is what will allow us to take our *small steps*.
+this case is what will allow us to take our *small steps*. It is important to set
+$\eta$ to a suitably small value, as high values for $\eta$ will cause the Gradient
+Descent to behave erratically, and even, make our loss worse!
 
+#+begin_src python :results value file replace :exports results :noweb strip-export
+fig, ax = plt.subplots(1, 3, figsize=(8, 3))
+w = -5
+ax[0].plot(ws, ls)
+ax[0].scatter([w], [loss(boston.RM, boston.target, w, 1)], color='red')
+ax[1].plot(ws, ls)
+ax[1].scatter([w], [loss(boston.RM, boston.target, w, 1)], color='red')
+ax[2].plot(ws, ls)
+ax[2].scatter([w], [loss(boston.RM, boston.target, w, 1)], color='red')
+
+# axes1
+def grad(ls_fn, w, h=1e-5):
+    return (ls_fn(w) - ls_fn(w+h)) / (w - (w+h))
+
+def update(w, eta=0.001):
+    g = grad(lambda w: loss(boston.RM, boston.target, w, 1), w)
+    return w - eta * g
+
+def learn(eta):
+    w = -5
+    losses = []
+    w_vals = []
+    l = loss(boston.RM, boston.target, w, 1)
+    losses.append(l)
+    w_vals.append(w)
+    for i in range(10):
+        w = update(w, eta=eta)
+        l = loss(boston.RM, boston.target, w, 1)
+        losses.append(l)
+        w_vals.append(w)
+    return losses, w_vals
+
+eta = 0.05
+losses, w_vals = learn(eta)
+ax[0].plot(w_vals, losses, 'x--', color='green')
+ax[0].set_title(f"$\eta = {eta}$")
+
+eta = 0.3
+losses, w_vals = learn(eta)
+ax[1].plot(w_vals, losses, 'x--', color='green')
+ax[1].set_title(f"$\eta = {eta}$")
+
+eta = 3
+losses, w_vals = learn(eta)
+ax[2].plot(w_vals, losses, 'x--', color='green')
+ax[2].set_title(f"$\eta = {eta}$")
+
+<<savefig(name="images/small_step_eta.png")>>
+#+end_src
+
+#+caption: Plotting the effect of $\eta$ on the step change of $w$.
+#+name: fig:eta
+#+ATTR_ORG: :width 500px
+#+RESULTS:
+[[file:images/small_step_eta.png]]
+
+In figure [[fig:eta]], we've varied the value of $\eta$ and computed 10 steps of updating
+the $w$ parameter in our linear model. When $\eta=0.05$, we see that $w$ is slowly
+being updated in a way that is causing our loss to decrease, but it is more so slowly
+that we don't reach the optimal value for $w$. When $\eta=3$, each change in $w$ is
+too large, so we over-shoot the optimal value, and end up bouncing back and forth
+without ever improving. Finally, when we set $\eta=0.3$, the changes in $w$ are
+sufficiently large enough such that we reach the *global minima* in time, but they are
+also small enough so that we don't over-shoot this same minimum.
+
+#+begin_src python
+import random
+
+class LinearModel:
+    def __init__(self):
+        self.w = random.randint(1, 1)
+        self.b = 1
+        self.w_states = [self.w]  # for visualisations
+        self.b_states = [self.b] 
+    def set_w(self, new_w):
+        self.w = new_w
+        self.w_states.append(new_w)
+    def set_b(self, new_b):
+        self.b = new_b
+        self.b_states.append(new_b)
+    @property
+    def params(self):
+        return self.w, self.b
+    def __call__(self, x, w=None, b=None):
+        if w is None: w = self.w
+        if b is None: b = self.b
+        return w * x + b
+
+def mae(y, y_hat):
+    return np.mean(np.abs(y - y_hat))
+
+def grad(f, param, diff=1e-7):
+    return (f(param+diff) - f(param)) / diff
+
+def update(g, gradient, eta=0.01):
+    return g - eta * gradient
+
+def fit(f, x, y, loss_fn, learning_rate=0.5, epochs=10):
+    losses = []
+    for i in range(epochs):
+        l = loss_fn(y, f(x))
+        w, b = f.params
+        d_w = grad(lambda p: loss_fn(y, f(x, w=p)), w)
+        d_b = grad(lambda p: loss_fn(y, f(x, b=p)), b)
+        f.set_w(update(f.w, d_w, learning_rate))
+        f.set_b(update(f.b, d_b, learning_rate))
+        losses.append(l)
+    return losses
+        
+
+lm = LinearModel()
+losses = fit(lm, boston.RM, boston.target, mae, learning_rate=0.05, epochs = 50)
+#+end_src
+
+#+begin_src python
+from matplotlib.animation import FuncAnimation
+fig, ax = plt.subplots()
+ax.scatter(boston.RM, boston.target)
+ax.set_xlabel("Number of rooms")
+ax.set_ylabel("House valuation in $1000")
+lines = ax.plot([], 'r--')
+line = lines[0]
+title = ax.text(7.5, 5, "")
+def anim(frame):
+    w, b = lm.w_states[frame], lm.b_states[frame]
+    line.set_data(boston.RM, lm(boston.RM, w, b))
+    title.set_text(f"$w={w:.2f}, b={b:.2f}$")
+anim_created = FuncAnimation(fig, anim, frames=len(lm.w_states), interval=1
+#anim_created.save("./images/lm_learn.gif", writer="imagemagick", fps=10)
+#+end_src
+
+If we then apply the Gradient Descent algorithm to both parameters of the linear
+model $w, b$, then we can find the optimal trend line for this data. Furthermore,
+visualising this will look something like figure [[fig:lm_learn]].
+
+#+name: fig:lm_learn
+#+CAPTION: Visualising the linear model as its parameters improve.
+[[file:images/lm_learn.gif]]
 
 * Logistic Regression
 
